--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "http-errors": "~1.6.3",
-    "jade": "^1.9.2",
-    "jsonwebtoken": "^8.5.1",
+    "jade": "^0.29.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.23.0"
