--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.23.0"
-  }
+  },
+  "devDependencies": {
+      "nodemon": "^2.0.12"
+  } 
 }
